--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "font-awesome-stylus",
-  "version": "1.2.0",
+  "version": "4.3.0",
   "homepage": "https://github.com/raulghm/Font-Awesome-Stylus",
   "authors": "Raúl Hernández",
   "description": "Stylus port for font-awesome (npm package)",
@@ -9,6 +9,5 @@
     "font awesome",
     "font awesome stylus"
   ],
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
