--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "Font-Awesome-Stylus",
-  "version": "4.5.0",
+  "version": "4.6.2",
   "homepage": "https://github.com/raulghm/Font-Awesome-Stylus",
-  "authors": "Raúl Hernández",
+  "authors": "Raul Hernandez",
   "description": "Stylus port for font-awesome (bower component)",
   "main": [
     "./stylus/index.styl"
