--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "font-awesome-stylus",
-  "version": "4.5.0",
+  "version": "4.6.2",
   "homepage": "https://github.com/raulghm/Font-Awesome-Stylus",
-  "authors": "Raúl Hernández",
+  "authors": "Raul Hernandez",
   "description": "Stylus port for font-awesome (npm package)",
   "main": "./stylus/index.styl",
   "keywords": [
