--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "font-awesome-stylus",
-  "version": "4.6.2",
+  "version": "4.6.3",
   "homepage": "https://github.com/raulghm/Font-Awesome-Stylus",
   "authors": "Raul Hernandez",
-  "description": "Stylus port for font-awesome (npm package)",
+  "description": "Stylus port for font-awesome",
   "main": "./stylus/index.styl",
+  "scripts": {
+    "build": "stylus example/src/styles.styl --out example/dist/styles.css"
+  },
   "keywords": [
     "font awesome",
     "font awesome stylus"
