--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,3 @@
-# Numerous always-ignore extensions
-*.diff
-*.err
-*.orig
-*.log
-*.rej
-*.swo
-*.swp
-*.vi
-*~
-*.sass-cache
-*.sublime*
-
-# OS or Editor folders
 .DS_Store
 .cache
 .project
@@ -19,5 +5,7 @@
 .tmproj
 nbproject
 Thumbs.db
-
-# Project specific
+*.log
+node_modules
+dist
+yarn.lock
