--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "font-awesome-stylus",
-  "version": "4.7.1-alpha.1",
+  "version": "4.7.1",
   "homepage": "https://github.com/raulghm/Font-Awesome-Stylus",
   "authors": "Raul Hernandez",
   "description": "Stylus port for font-awesome",
